# mission_scanner

./: .gitignore  README.md  mission_scanner.code-workspace  pyproject.toml  setup.py  test.sqf  test_data_setup.bat
sample_data/co32_Seaside_Sweep_2.Altis/: initserver.sqf  mission.sqm
sample_data/co33_cybertruck_at_home_v2.tem_anizay/: description.ext  init.sqf  mission.sqm
sample_data/co33_cybertruck_at_home_v2.tem_anizay/briefing/: admin.sqf
sample_data/co33_cybertruck_at_home_v2.tem_anizay/loadouts/: blufor_loadout.hpp  opfor_loadout.hpp
sample_data/co33_elephant_of_surprise.tem_kujari/: XEH_PreInit.sqf  mission.sqm
sample_data/co33_elephant_of_surprise.tem_kujari/briefing/: briefing_blufor.sqf
sample_data/co33_elephant_of_surprise.tem_kujari/loadouts/: opfor_loadout.hpp
sample_data/co34_lets_ride_the_mechanism_v2.tem_suursaariv/: initplayerlocal.sqf  mission.sqm
sample_data/co34_lets_ride_the_mechanism_v2.tem_suursaariv/2035_NATO_Multicam/: NATO_MULTICAM_loadout.hpp
sample_data/pre_session.sara/: XEH_PostInit.sqf  XEH_PreInit.sqf  cba_settings.sqf  defines.hpp  description.ext  initplayerlocal.sqf  initserver.sqf  mission.sqm  onPlayerRespawn.sqf  readme.txt  ui_defines.hpp
scripts/: scan_missions.py
src/mission_scanner/: __init__.py  _version.py  api.py  base_parser.py  cache.py  models.py  parser.py  scanner.py  text_processor.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_hpp_parser.py  test_parser_hpp.py  test_sqf_parser.py  test_sqm_parser.py
tests/sample_data/: blufor_loadout.hpp  example_curated_arsenal.sqf  example_curatedgear.sqf  example_mission.sqm  opfor_loadout.hpp
(+146 files in other folders)
