[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mission_scanner"
version = "0.1.0"
description = "A simple asset scanner for Arma 3 modding projects"
authors = ["Tom Campbell <tyen901@gmail.com>"]
readme = "README.md"
packages = [{include = "mission_scanner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
class-scanner = { path = "../class_scanner", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
setuptools = "^75.8.0"
wheel = "^0.45.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
